RESOLVED FIXED306842
[Site Isolation] Cross site iframe fails to window.open the main frame's site
https://bugs.webkit.org/show_bug.cgi?id=306842
Summary [Site Isolation] Cross site iframe fails to window.open the main frame's site
rupin
Reported 2026-02-02 23:13:37 PST
[Site Isolation] Cross site iframe fails to window.open the main frame's site
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-02 23:13:43 PST
rupin
Comment 2 2026-02-02 23:53:24 PST
EWS
Comment 3 2026-02-04 09:38:36 PST
Committed 306784@main (e4e510eeb1e1): <https://commits.webkit.org/306784@main> Reviewed commits have been landed. Closing PR #57760 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.